# gamma-watermark-remover-mcp

./: README.md  pyproject.toml  smithery.yaml
gamma_watermark_remover_mcp/: __init__.py  http_server.py  server.py
